--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,20 @@
 
     <title>CAR Trading</title>
 
-    <script src="vendor/c3.min.js"></script>
+    <!-- <script src="vendor/c3.min.js"></script>
     <script src="vendor/d3.v5.min.js"></script>
-    <link href="vendor/c3.min.css" rel="stylesheet" />
+    <link href="vendor/c3.min.css" rel="stylesheet" /> -->
+
+    <!-- <script src="https://www.gstatic.com/charts/loader.js"></script>
+    <script>
+      google.charts.load("current", { packages: ["bar"] });
+    </script> -->
+
+    <script src="vendor/apexcharts.js"></script>
 
     <script src="vendor/vue.global.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="vendor/axios.min.js"></script>
     <link rel="shortcut icon" type="image/png" href="images/bull-logo.png" />
 
     <link rel="stylesheet" href="style/main.css" />
