showing OI chart in OI series on separate view

--- a/public/index.html
+++ b/public/index.html
@@ -68,15 +68,15 @@
       <hr />
       <div class="container" v-if="display == 'both' ">
         <div class="innerContainer">
-          <option-chain symbol="BANKNIFTY"> </option-chain>
+          <option-chain symbol="BANKNIFTY" :display="display"> </option-chain>
         </div>
         <div class="innerContainer">
-          <option-chain symbol="NIFTY"> </option-chain>
+          <option-chain symbol="NIFTY" :display="display"> </option-chain>
         </div>
       </div>
       <div class="container" v-else>
         <div class="innerContainer">
-          <option-chain :symbol="display"> </option-chain>
+          <option-chain :symbol="display" :display="display"> </option-chain>
         </div>
       </div>
       <div>
