--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <script type="importmap">
       {
         "imports": {
-          "vue": "https://unpkg.com/vue@3/dist/vue.esm-browser.js"
+          "vue": "./vendor/vueCdn/vue.esm-browser.prod.js"
         }
       }
     </script>
