--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
     <script src="vendor/apexcharts.js"></script>
 
-    <script src="vendor/vue.global.js"></script>
+    <script src="vendor/vueCdn/vue.global.prod.js"></script>
 
     <script src="vendor/axios.min.js"></script>
     <link rel="shortcut icon" type="image/png" href="images/bull-logo.png" />
