OIStats removed, showing Index value in OIChain

--- a/public/coa.html
+++ b/public/coa.html
@@ -5,6 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      .custome-table {
+        width: 100%;
+        border-collapse: collapse;
+      }
+      .custome-table td {
+        border: 1px solid black;
+        text-align: center;
+        height: 100px;
+        font-weight: bold;
+        font-size: 20px;
+        color: black;
+        background-color: lightgray;
+      }
+      .custome-table .bg-red {
+        background-color: red;
+      }
+      .custome-table .bg-green {
+        background-color: green;
+      }
+      td,
+      th {
+        padding: 5px;
+        /* padding-bottom: 5px; */
+        text-align: center !important;
+        width: 3.7%;
+      }
+    </style>
   </head>
   <body>
     <table id="oi_accuracy_table" class="custome-table">
