--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
           </template>
         </select>
 
-        <label> Expiry: </label>
+        &nbsp; Expiry:
         <select v-model="expiry" @change="refreshData()">
           <option disabled value="">Select Expiry</option>
           <option value="0">Current</option>
