Added OI chain analysis quick note

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     <script src="vendor/axios.min.js"></script>
     <link rel="shortcut icon" type="image/png" href="images/bull-logo.png" />
 
+    <!-- <link rel="stylesheet" href="style/normalize.css" /> -->
+    <!-- <link rel="stylesheet" href="style/skeleton.css" /> -->
     <link rel="stylesheet" href="style/main.css" />
   </head>
 
@@ -83,6 +85,30 @@
       <!-- <div>
         <pre>{{store}}</pre></td>
       </div> -->
+      <div>
+        <pre>
+          OI Chain analysis:
+
+          OI Chain information will help you to decide, where to enter Call or Put, whether to hold back entered trade, or to book profit or loss.
+
+          Wait for Price to reach Strong Support or Strong Resistance and once it reaches check few strike of ITM and OTM from ATM strike,
+          lets say 3 from each side and see what is happening with PUT and CALLS (SB, LB, LU, SS) like which side writers are supporting (adding more contracts) and who is running away ( closing contracts)..
+
+          If trend is reversing based on above points, take small risk wil lesser Stop Loss, and reward will be good
+
+          Don't take trades if data is not clearly telling whether trend is changing or not (like doji)
+
+          Have patience before taking trade. WAIT WAIT WAIT for the price to reach the SUPPORT or RESISTANCE strike.
+
+          Let Big fish decide who is strong near that points and then swim with them on their side
+
+          Enter into PE if reversing from Resistance strike by looking at CALL side data.
+
+          Enter into CE if reversing from Support strike by looking at PUT side data.
+
+          NOTE:  Be ready to change the party, You don't have to have predetermined mindset, look at the data, decide the trend direction.
+        </pre>
+      </div>
     </div>
     <script type="module" src="index.js"></script>
   </body>
