hiding comments and warning IV > 25

--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
       <!-- <div>
         <pre>{{store}}</pre></td>
       </div> -->
-      <div>
+      <div class="hidden">
         <pre>
           OI Chain analysis:
 
