--- a/public/index.html
+++ b/public/index.html
@@ -135,7 +135,7 @@
                 As long as Calls are Increasing and Puts are decreasing or not incrasing it will be <span class="DOWN bold priceRed">FALL - BEARISH</span>
             </p>
             <p>
-                If both Calls and Puts are increasing or decreasing, side wise market <span class="NEUTRAL"> &#10500; </span>STAY away - wait and watch.
+                If both Calls and Puts are increasing or decreasing, <span class="NEUTRAL"> <b>SIDE WISE</b> market </span> STAY AWAY - wait and watch.
             <br/>It will be tough fight between Bulls and Bears, leading to Sidewise or RANGE bound market.
             </p>
             <div class="notes">
